--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID=
+SESSION_ID=Bmwmd$v17X2zR7
 AUTO_STATUS_SEEN=true
 REJECT_CALL=true 
 MODE=public
@@ -6,7 +6,7 @@ WELCOME=false
 AUTO_READ=false
 AUTO_TYPING=false
 AUTO_RECORDING=false
-ALWAYS_ONLINE=false 
+ALWAYS_ONLINE=true 
 AUTO_BLOCK=false
 AUTO_REACT=false
 PREFIX=.
